fix the layout bug on personal component

--- a/gzhipin-client/src/assets/css/index.less
+++ b/gzhipin-client/src/assets/css/index.less
@@ -10,3 +10,10 @@
     width: 100%;
     height: inherit;
 }
+
+.sticky-header { // keep the header at the top
+    z-index: 10;
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
